deployments/dogs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dogs-server
  namespace: dogs-namespace

spec:
  replicas: 1

  selector:
    matchLabels:
      app: dogs-server-pod

  template:
    metadata:
      labels:
        app: dogs-server-pod

    spec:
      containers:
        - name: dogs-server-container

          image: 637245085808.dkr.ecr.us-east-1.amazonaws.com/ecs_demo/dogs_service:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          volumeMounts:
            - name: dogs-config-volume
              mountPath: /app/config

          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1

          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3

      volumes:
        - name: dogs-config-volume
          configMap:
            name: dogs-configmap
            items:
              - key: config.yaml
                path: config.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: dogs-server-service
  namespace: dogs-namespace

spec:
  type: ClusterIP

  selector:
    app: dogs-server-pod

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
