deployments/dogs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dogs-ingress
  namespace: dogs-namespace
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dogs-server-service
            port:
              number: 8080
